--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,53 +1,35 @@
-/* color palette from <https://github.com/vuejs/theme> */
 :root {
-  --vt-c-white: #ffffff;
-  --vt-c-white-soft: #f8f8f8;
-  --vt-c-white-mute: #f2f2f2;
+  --border-radius: 0.5rem;
 
-  --vt-c-black: #181818;
-  --vt-c-black-soft: #222222;
-  --vt-c-black-mute: #282828;
+  /* colors */
+  --dark-square-color: #759656;
+  --light-square-color: #EEEED2;
 
-  --vt-c-indigo: #2c3e50;
+  --dark-square-red-highlight: #D56D52;
+  --light-square-red-highlight: #ED7F6B;
 
-  --vt-c-divider-light-1: rgba(60, 60, 60, 0.29);
-  --vt-c-divider-light-2: rgba(60, 60, 60, 0.12);
-  --vt-c-divider-dark-1: rgba(84, 84, 84, 0.65);
-  --vt-c-divider-dark-2: rgba(84, 84, 84, 0.48);
+  --dark-square-blue-highlight: #5AABC3;
+  --light-square-blue-highlight: #74BDDB;
 
-  --vt-c-text-light-1: var(--vt-c-indigo);
-  --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
-  --vt-c-text-dark-1: var(--vt-c-white);
-  --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
-}
+  --dark-square-green-highlight: #A1C358;
+  --light-square-green-highlight: #BAD573;
 
-/* semantic color variables for this project */
-:root {
-  --color-background: var(--vt-c-white);
-  --color-background-soft: var(--vt-c-white-soft);
-  --color-background-mute: var(--vt-c-white-mute);
+  --dark-square-yellow-highlight: #E4A625;
+  --light-square-yellow-highlight: #FCB846;
 
-  --color-border: var(--vt-c-divider-light-2);
-  --color-border-hover: var(--vt-c-divider-light-1);
+  /* colors stolen from chess.com */
+  --basicColor: hsla(0, 0%, 100%, .72);
+  --basicHoverColor: #fff;
+  --basicBgColor: hsla(0, 0%, 100%, .08);
+  --basicBghover: hsla(0, 0%, 100%, .16);
 
-  --color-heading: var(--vt-c-text-light-1);
-  --color-text: var(--vt-c-text-light-1);
+  --basicBorderColor: hsla(0, 0%, 100%, .1);
 
-  --section-gap: 160px;
-}
+  /* images */
+  --board-image: url('https://www.chess.com/boards/icy_sea/150.png');
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --color-background: var(--vt-c-black);
-    --color-background-soft: var(--vt-c-black-soft);
-    --color-background-mute: var(--vt-c-black-mute);
-
-    --color-border: var(--vt-c-divider-dark-2);
-    --color-border-hover: var(--vt-c-divider-dark-1);
-
-    --color-heading: var(--vt-c-text-dark-1);
-    --color-text: var(--vt-c-text-dark-2);
-  }
+  /* breakpoints */
+  --small-screen: 960px
 }
 
 *,
@@ -56,19 +38,13 @@
   box-sizing: border-box;
   margin: 0;
   position: relative;
-  font-weight: normal;
 }
 
 body {
-  min-height: 100vh;
-  color: var(--color-text);
-  background: var(--color-background);
-  transition: color 0.5s, background-color 0.5s;
-  line-height: 1.6;
+  background-image: url('https://images.chesscomfiles.com/uploads/v1/theme/101411-0.2d687d92.jpg');
+  background-position: center center;
+  background-size: cover;
+  background-attachment: fixed;
   font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
     Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  font-size: 15px;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
